menu para desktop

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título de la Página</title>
+    <title>Inicio</title>
     <!-- Metadatos adicionales -->
     <meta name="description" content="Descripción de la página">
     <meta name="keywords" content="palabras, clave">
@@ -20,6 +20,26 @@
 </head>
 
 <body>
+
+    <div class="desktop-menu">
+
+        <ul>
+            <li>
+                <a href="" class="title-menu">Mis órdenes</a>  
+            </li>
+            <li>
+                <a href="" class="title-menu">Mi cuenta</a>  
+            </li>
+            <hr>
+            <li>
+                <a href="" class="title-salir">Salir</a>  
+            </li>
+        </ul>
+
+
+    </div>
+
+
 
     <section class="main-container">
         <div class="card-container">
