--- a/movil-menu.html
+++ b/movil-menu.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título de la Página</title>
+    <title>Menú Móvil</title>
     <!-- Metadatos adicionales -->
     <meta name="description" content="Descripción de la página">
     <meta name="keywords" content="palabras, clave">
@@ -21,21 +21,48 @@
 
 <body>
 
-    <div class="desktop-menu">
-
+    <div class="movil-menu-first">
         <ul>
             <li>
-                <a href="" class="title-menu">Mis órdenes</a>  
+                <a href="">CATEGORIAS</a>
             </li>
             <li>
-                <a href="" class="title-menu">Mi cuenta</a>  
+                <a href="">Mostrar todo</a>
             </li>
             <li>
-                <a href="" class="title-salir">Salir</a>  
+                <a href="">Módulos</a>
+            </li>
+            <li>
+                <a href="">Servicios</a>
+            </li>
+            <li>
+                <a href="">Otros</a>
             </li>
         </ul>
+    </div>
 
+    <div class="line-menu"></div>
+ 
+    <div class="movil-menu-first">
+        <ul>
+            <li>
+                <a href="">Mis pedidos</a>
+            </li>
+            <li>
+                <a href="">Mi cuenta</a>
+            </li>
+        </ul>
+    </div>
 
+    <div class="movil-menu-second">
+        <ul>
+            <li>
+                <a href="">info@saiasoftware.com</a>
+            </li>
+            <li>
+                <a  href="">Salir</a>
+            </li>
+        </ul>
     </div>
 
 
