se finalizan pantallas

--- a/myorder-desktop.html
+++ b/myorder-desktop.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mis órdenes</title>
+    <title>Mi orden</title>
     <!-- Metadatos adicionales -->
     <meta name="description" content="Descripción de la página">
     <meta name="keywords" content="palabras, clave">
@@ -25,7 +25,7 @@
         <div class="my-order-container">
 
             <div class="title-order">
-                <p>Mis órdenes</p>
+                <p>Mi orden</p>
             </div>
             
             
